# langchain-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
langchain-agents/: Cargo.toml
langchain-agents/src/: conversational.rs  executor.rs  factory.rs  json_agent.rs  lib.rs  mrkl.rs  multi_agent.rs  openai_assistants.rs  openai_functions.rs  plan_and_execute.rs  react.rs  self_ask.rs  structured_chat.rs  tool_calling.rs  traits.rs  types.rs  xml.rs
langchain-agents/src/toolkits/: ainetwork.rs  conversational_retrieval.rs  csv_toolkit.rs  file_management.rs  github_toolkit.rs  gitlab.rs  json_toolkit.rs  mod.rs  multion.rs  nasa.rs  nla.rs  office365.rs  openapi_toolkit.rs  playwright.rs  powerbi.rs  sql_toolkit.rs  traits.rs  vectorstore_toolkit.rs  zapier_toolkit.rs
langchain-agents/tests/: agent_tests.rs
langchain-callbacks/: Cargo.toml
langchain-callbacks/src/: base.rs  clearml.rs  comet.rs  evaluation.rs  event_stream.rs  file.rs  helicone.rs  langfuse.rs  langsmith.rs  lib.rs  manager.rs  mlflow.rs  portkey.rs  promptlayer.rs  run_collector.rs  stdout.rs  streaming_stdout.rs  traits.rs  usage.rs  wandb.rs
langchain-callbacks/tests/: callback_tests.rs
langchain-chains/: Cargo.toml
langchain-chains/src/: api_chain.rs  chat_vector_db.rs  combine.rs  constitutional_chain.rs  conversational.rs  conversational_retrieval.rs  ernie_functions.rs  extraction.rs  file_input.rs  flare.rs  graph_qa.rs  hyde.rs  lib.rs  llm_bash_chain.rs  llm_chain.rs  llm_checker_chain.rs  llm_math_chain.rs  llm_symbolic_math.rs  map_reduce.rs  map_rerank.rs  map_rerank_documents.rs  moderation_chain.rs  multi_retrieval_qa.rs  natbot.rs  openapi_endpoint.rs  qa_generation.rs  qa_with_sources.rs  question_answering.rs  reduce_answers.rs  reduce_documents.rs  refine_answers.rs  refine_documents.rs  retrieval.rs  retrieval_qa.rs  router.rs  sequential.rs  sql_database.rs  structured_output.rs  stuff_documents.rs  summarize.rs  (+5 more)
langchain-chains/tests/: chain_tests.rs
langchain-core/: Cargo.toml
langchain-core/benches/: core_bench.rs
langchain-core/src/: agents.rs  callbacks.rs  chat_history.rs  chat_loaders.rs  compressors.rs  config.rs  cross_encoders.rs  doc_stores.rs  document_transformers.rs  documents.rs  embeddings.rs  env.rs  errors.rs  globals.rs  indexing.rs  language_models.rs  lib.rs  load.rs  messages.rs  output_parsers.rs  outputs.rs  prompt.rs  prompt_values.rs  rate_limiters.rs  runnable.rs  schema.rs  schemas.rs  streaming.rs  structured_query.rs  sys_info.rs  text_splitters.rs  tokenization.rs  tools.rs  tracers.rs  utils.rs  vectorstores.rs
langchain-core/src/caches/: mod.rs
langchain-core/src/example_selectors/: length_based.rs  maximal_margin.rs  mod.rs  ngram.rs
langchain-core/src/lcel/: mod.rs
langchain-core/src/retrievers/: mod.rs
langchain-core/src/runnables/: assign.rs  branch.rs  configurable.rs  fallback.rs  graph.rs  history.rs  map.rs  mod.rs  passthrough.rs  pick.rs  retry.rs  router.rs
langchain-core/src/stores/: mod.rs
langchain-core/tests/: core_tests.rs
langchain-document-loaders/: Cargo.toml
langchain-embeddings/: Cargo.toml
langchain-embeddings/src/: azure.rs  bedrock.rs  cohere.rs  deepseek.rs  fake.rs  google.rs  gpt4all.rs  huggingface.rs  jina.rs  lib.rs  llamacpp.rs  minimax.rs  mistral.rs  nomic.rs  ollama.rs  openai.rs  traits.rs  voyage.rs
langchain-embeddings/src/providers/: alibaba_dashscope.rs  alibaba_gte.rs  alibaba_gte_qwen.rs  alibaba_text.rs  alibaba_text_embedding.rs  alibaba_vector.rs  amazon_nova.rs  amazon_titan_multimodal.rs  anthropic.rs  anthropic_claude.rs  anthropic_latest.rs  ark.rs  astra.rs  aws_bedrock_claude.rs  aws_bedrock_cohere_v2.rs  aws_bedrock_llama_v2.rs  aws_bedrock_mistral.rs  aws_bedrock_titan_v2.rs  aws_sagemaker.rs  azure_cognitive.rs  azure_openai.rs  baichuan.rs  baidu_bce.rs  baidu_bge.rs  baidu_embedding.rs  baidu_ernie.rs  baidu_ernie_embed.rs  baidu_qianfan.rs  bedrock_ai21.rs  bedrock_ai21_jurassic.rs  bedrock_amazon.rs  bedrock_amazon_titan.rs  bedrock_amazon_titan_v2.rs  bedrock_anthropic.rs  bedrock_anthropic_claude.rs  bedrock_cohere.rs  bedrock_cohere_english.rs  bedrock_cohere_multilingual.rs  bedrock_jurassic.rs  bedrock_llama.rs  (+71 more)
langchain-embeddings/tests/: embedding_tests.rs
langchain-evaluation/: Cargo.toml
langchain-evaluation/src/: agent_evaluators.rs  comparison_evaluators.rs  datasets.rs  evaluators.rs  langsmith.rs  langsmith_integration.rs  lib.rs  metrics.rs  runner.rs  runners.rs  string_evaluators.rs  traits.rs
langchain-evaluation/tests/: eval_tests.rs
langchain-examples/: Cargo.toml
langchain-examples/src/: callbacks_demo.rs  eval_demo.rs  lcel_demo.rs  main.rs  serve_demo.rs  streaming_demo.rs  vector_store_demo.rs
langchain-graph/: Cargo.toml
langchain-graph/src/: checkpoint.rs  edges.rs  graph.rs  human_in_loop.rs  kuzu_graph.rs  lib.rs  nebula_graph.rs  neo4j_graph.rs  neptune_graph.rs  networkx_graph.rs  nodes.rs  persistence.rs  persistence_postgres.rs  persistence_sqlite.rs  state.rs  subgraph.rs  tool_nodes.rs
langchain-graph/tests/: graph_tests.rs
langchain-llms/: Cargo.toml
langchain-memory/: Cargo.toml
langchain-memory/src/: astra_history.rs  buffer.rs  buffer_window.rs  cassandra.rs  chat_message_histories.rs  combined.rs  cosmosdb_history.rs  dynamodb.rs  dynamodb_history.rs  elasticsearch_history.rs  entity.rs  firestore_history.rs  lib.rs  memgraph.rs  mongodb_history.rs  mongodb_memory.rs  motorhead.rs  neo4j_history.rs  postgres.rs  postgres_history.rs  prompt_memory.rs  readonly.rs  redis_history.rs  redis_memory.rs  sql_history.rs  sqlite_memory.rs  summary.rs  token_buffer.rs  traits.rs  vector_store_memory.rs  vectorstore_memory.rs  vectorstore_token_buffer.rs  window.rs  zep.rs  zep_memory.rs
langchain-memory/tests/: memory_tests.rs
langchain-serve/: Cargo.toml
langchain-serve/src/: auth.rs  batch_routes.rs  config_routes.rs  lib.rs  middleware.rs  playground.rs  routes.rs  schemas.rs  server.rs  stream_routes.rs
langchain-tools/: Cargo.toml
langchain-vectorstores/: Cargo.toml
(+1072 files in other folders)
