[workspace]
resolver = "2"
members = [
    "langchain-core",
    "langchain-llms",
    "langchain-embeddings",
    "langchain-vectorstores",
    "langchain-tools",
    "langchain-document-loaders",
    "langchain-memory",
    "langchain-agents",
    "langchain-chains",
    "langchain-graph",
    "langchain-evaluation",
    "langchain-serve",
    "langchain-callbacks",
    "langchain-examples",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-middleware = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
futures-util = "0.3"
pin-project = "1"
pin-project-lite = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1"
dashmap = "6"
parking_lot = "0.12"
rand = "0.8"
rand_distr = "0.4"
criterion = { version = "0.5", features = ["async_futures"] }
csv = "1.3"
bytes = "1"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
url = "2"
mime = "0.3"
mime_guess = "2"
itertools = "0.13"
indexmap = "2"
ordered-float = "4"
percent-encoding = "2"
flate2 = "1"
tar = "0.4"
walkdir = "2"
glob = "0.3"
tempfile = "3"
async-compression = { version = "0.4", features = ["gzip", "brotli"] }
schemars = "0.8"
jsonpath-rust = "0.7"
axum = { version = "0.8", features = ["json", "ws"] }
tonic = "0.12"
prost = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "mysql"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
mongodb = "3"
opensearch = "2"
qdrant-client = "1"
elasticsearch = "9.1.0-alpha.1"
http = "1.1"
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
aws-types = "1.2"
