[package]
name = "langchain-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["all"]
react = []
openai_functions = []
xml = []
structured_chat = []
tool_calling = []
json = []
self_ask = []
conversational = []
plan_and_execute = []
openai_assistants = []
mrkl = []
multi_agent = []
all = ["react", "openai_functions", "xml", "structured_chat", "tool_calling", "json", "self_ask", "conversational", "plan_and_execute", "openai_assistants", "mrkl", "multi_agent"]

[dependencies]
langchain-core = { path = "../langchain-core" }
langchain-llms = { path = "../langchain-llms" }
langchain-tools = { path = "../langchain-tools" }
langchain-memory = { path = "../langchain-memory" }
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
regex.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
langchain-core = { path = "../langchain-core" }
langchain-llms = { path = "../langchain-llms" }
langchain-tools = { path = "../langchain-tools" }
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
