[package]
name = "langchain-callbacks"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["all"]
stdout = []
langsmith = []
wandb = []
mlflow = []
clearml = []
langfuse = []
portkey = []
comet = []
promptlayer = []
helicone = []
all = ["stdout", "langsmith", "wandb", "mlflow", "clearml", "langfuse", "portkey", "comet", "promptlayer", "helicone"]

[dependencies]
langchain-core = { path = "../langchain-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
sha2.workspace = true
hmac.workspace = true

[dev-dependencies]
langchain-core = { path = "../langchain-core" }
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
