[package]
name = "langchain-chains"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
langchain-core = { path = "../langchain-core" }
langchain-llms = { path = "../langchain-llms" }
langchain-memory = { path = "../langchain-memory" }
langchain-vectorstores = { path = "../langchain-vectorstores" }
langchain-tools = { path = "../langchain-tools" }
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
reqwest.workspace = true
regex.workspace = true
chrono.workspace = true
