[package]
name = "langchain-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
lazy_static.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true
schemars.workspace = true
bytes.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
csv.workspace = true
itertools.workspace = true
indexmap.workspace = true
pin-project.workspace = true
redis = { workspace = true, optional = true }

[features]
default = []
redis = ["dep:redis"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "core_bench"
harness = false
