[package]
name = "langchain-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openai"]
openai = []
huggingface = []
cohere = []
google = []
bedrock = ["dep:aws-sigv4", "dep:aws-credential-types", "dep:aws-types", "dep:http"]
mistral = []
jina = []
ollama = []
voyage = []
nomic = []
azure = []
deepseek = []
gpt4all = []
llamacpp = []
minimax = []
cache_backed = []
fastembed = []
sentence_transformer = []
self_hosted = []
self_hosted_huggingface = []
self_hosted_llama = []
tensorflowhub = []
everyscale = []
bookend = []
clarifai = []
providers_cohere = []
watsonx = []
deepinfra = []
gradient = []
huggingface_inference = []
johnsnowlabs = []
providers_llamacpp = []
providers_ollama = []
spacy = []
xinference = []

providers_bedrock_titan = []
providers_bedrock_cohere = []
providers_bedrock_mistral = []
providers_bedrock_llama = []
providers_bedrock_stabilityai = []
providers_bedrock_amazon = []
providers_bedrock_anthropic = []
providers_azure_openai = []
providers_aws_sagemaker = []
providers_google_vertexai = []
providers_google_palm = []
providers_dashscope = []
providers_minimax = []
providers_reka = []
providers_writer = []
alibaba_text = []
anthropic = []
ark = []
astra = []
baidu_ernie = []
baidu_qianfan = []
baichuan = []
bedrock_ai21 = []
bedrock_jurassic = []
bedrock_titan_multimodal = []
cerebras = []
databricks_embed = []
engram = []
ernie = []
fastembed_v2 = []
fire_embed = []
fireworks_embed = []
google_gecko = []
google_multimodal = []
groq_embed = []
gte = []
gte_small = []
huggingface_instruct = []
huggingface_sentence = []
octoai_embed = []
alibaba_vector = []
anthropic_latest = []
aws_bedrock_claude = []
aws_bedrock_mistral = []
aws_bedrock_cohere_v2 = []
aws_bedrock_llama_v2 = []
aws_bedrock_titan_v2 = []
azure_cognitive = []
baidu_bce = []
bedrock_amazon_titan = []
bedrock_ai21_jurassic = []
bedrock_stabilityai_v2 = []
cohere_english = []
cohere_multilingual = []
deepinfra_v2 = []
deepseek_v2_embed = []
fireworks_v2_embed = []
google_gecko_v2 = []
google_multimodal_v2 = []
google_vertexai_v3 = []
alibaba_dashscope = []
alibaba_gte = []
alibaba_gte_qwen = []
alibaba_text_embedding = []
amazon_nova = []
amazon_titan_multimodal = []
anthropic_claude = []
baidu_bge = []
baidu_embedding = []
baidu_ernie_embed = []
bedrock_amazon_titan_v2 = []
bedrock_anthropic_claude = []
bedrock_cohere_multilingual = []
bedrock_cohere_english = []
bedrock_llama_guard = []
bedrock_mistral_embed = []
bedrock_stability_embed = []
bedrock_titan_multimodal_v2 = []
bytedance_embed = []
cohere_embed_english_v3 = []
cohere_embed_multilingual_v3 = []
cohere_embed_light = []
cohere_embed_english_v2 = []
databricks_bge = []
deepinfra_bge = []
deepinfra_e5 = []
deepinfra_gte = []
google_bert = []
google_gecko_multilingual = []
google_gecko_text = []

all = ["openai", "huggingface", "cohere", "google", "bedrock", "mistral", "jina", "ollama", "voyage", "nomic", "azure", "deepseek", "gpt4all", "llamacpp", "minimax"]
test-all = ["voyage", "nomic", "azure", "deepseek", "gpt4all", "llamacpp", "minimax"]

[dependencies]
langchain-core = { path = "../langchain-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
tracing.workspace = true
rand.workspace = true
url.workspace = true
aws-sigv4 = { version = "1.2", optional = true }
aws-credential-types = { version = "1.2", optional = true }
aws-types = { version = "1.2", optional = true }
http = { workspace = true, optional = true }

[dev-dependencies]
langchain-core = { path = "../langchain-core" }
tokio = { workspace = true, features = ["rt", "macros"] }
