[package]
name = "langchain-evaluation"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
langsmith = []

[dependencies]
langchain-core = { path = "../langchain-core" }
langchain-llms = { path = "../langchain-llms" }
langchain-chains = { path = "../langchain-chains" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
regex.workspace = true
chrono.workspace = true
csv.workspace = true
uuid.workspace = true
reqwest.workspace = true

[dev-dependencies]
langchain-core = { path = "../langchain-core" }
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
