[package]
name = "langchain-examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
langchain-core = { path = "../langchain-core" }
langchain-llms = { path = "../langchain-llms" }
langchain-embeddings = { path = "../langchain-embeddings" }
langchain-vectorstores = { path = "../langchain-vectorstores", features = ["inmemory"] }
langchain-tools = { path = "../langchain-tools" }
langchain-document-loaders = { path = "../langchain-document-loaders" }
langchain-memory = { path = "../langchain-memory" }
langchain-agents = { path = "../langchain-agents" }
langchain-chains = { path = "../langchain-chains" }
langchain-graph = { path = "../langchain-graph" }
langchain-evaluation = { path = "../langchain-evaluation" }
langchain-callbacks = { path = "../langchain-callbacks", features = ["stdout"] }
langchain-serve = { path = "../langchain-serve" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
async-trait.workspace = true
chrono.workspace = true