[package]
name = "langchain-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
langchain-core = { path = "../langchain-core" }
langchain-llms = { path = "../langchain-llms" }
langchain-tools = { path = "../langchain-tools" }
langchain-memory = { path = "../langchain-memory" }
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
futures-util.workspace = true
tracing.workspace = true
pin-project.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { workspace = true, optional = true }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
all = ["sqlite", "postgres", "neo4j", "neptune", "networkx", "kuzu", "nebula"]
tool_nodes = []
subgraph = []
human_in_loop = []
neo4j = []
neptune = []
networkx = []
kuzu = []
nebula = []

[dev-dependencies]
langchain-core = { path = "../langchain-core" }
tokio = { workspace = true, features = ["rt", "macros"] }
futures.workspace = true
serde_json.workspace = true
