[package]
name = "langchain-serve"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
langchain-core = { path = "../langchain-core" }
langchain-chains = { path = "../langchain-chains" }
langchain-agents = { path = "../langchain-agents" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
futures.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tokio-stream = { workspace = true, features = ["sync"] }
uuid.workspace = true
